@@ -1010,6 +1010,7 @@ of MediaWiki:Newpagetext) to &action=edit, if page is new.
 * (bug 4258) When installing under IIS, $wgArticlePath = "$wgScript?title=$1" should be set
 * (bug 4510) Correct Barnes & Noble bookstore URLs
 * (bug 4504) Use site language for namespace name resolution
+* (bug 4530) Fix Kurdish language name
 
 === Caveats ===
 
